<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".FormCadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:layout_marginBottom="50dp"
            android:text="@string/tela_de_cadastro"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/idcard" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:text="@string/digite_seu_nome"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTxtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:ems="10"
            android:hint="@string/ex_pedro"
            android:inputType="text"
            android:textAlignment="center"
            android:text=""
            android:textColor="@color/blue"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:textSize="20sp"
            android:backgroundTint="@color/blue"
            android:text="@string/registrar" />
    </LinearLayout>

</LinearLayout>